@@ -1,15 +1,73 @@
+
 use strict;
 use warnings;
-use ExtUtils::MakeMaker;
 
-WriteMakefile(
-	NAME      => 'PDL::NDBin',
-	PREREQ_PM => {
-		'Data::Dumper'      => 0,
-		'Log::Any'          => 0,
-		'Math::Round'       => 0,
-		'Module::Pluggable' => 0,
-		'PDL'               => 0,
-		'UUID::Tiny'        => 0,
-	},
+
+
+use ExtUtils::MakeMaker 6.30;
+
+
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "Multidimensional binning & histogramming",
+  "AUTHOR" => "Edward Baudrez <ebaudrez\@cpan.org>",
+  "BUILD_REQUIRES" => {
+    "File::Find" => 0,
+    "File::Temp" => 0,
+    "Module::Pluggable" => 0,
+    "PDL" => 0,
+    "Test::Deep" => 0,
+    "Test::Exception" => 0,
+    "Test::More" => "0.88",
+    "Test::NoWarnings" => 0,
+    "Test::PDL" => "0.04"
+  },
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => "6.30"
+  },
+  "DISTNAME" => "PDL-NDBin",
+  "EXE_FILES" => [],
+  "LICENSE" => "perl",
+  "NAME" => "PDL::NDBin",
+  "PREREQ_PM" => {
+    "Carp" => 0,
+    "Data::Dumper" => 0,
+    "Exporter" => 0,
+    "List::MoreUtils" => 0,
+    "List::Util" => 0,
+    "Log::Any" => 0,
+    "Math::Round" => 0,
+    "PDL::Lite" => 0,
+    "POSIX" => 0,
+    "UUID::Tiny" => 0,
+    "integer" => 0,
+    "strict" => 0,
+    "warnings" => 0
+  },
+  "VERSION" => "0.005",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
 );
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.56) } ) {
+  my $br = delete $WriteMakefileArgs{BUILD_REQUIRES};
+  my $pp = $WriteMakefileArgs{PREREQ_PM};
+  for my $mod ( keys %$br ) {
+    if ( exists $pp->{$mod} ) {
+      $pp->{$mod} = $br->{$mod} if $br->{$mod} > $pp->{$mod};
+    }
+    else {
+      $pp->{$mod} = $br->{$mod};
+    }
+  }
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
+
+
+
