@@ -1,0 +1,13 @@
+
+
+This archive contains the distribution PDL-NDBin,
+version 0.005:
+
+  Multidimensional binning & histogramming
+
+This software is copyright (c) 2013 by Edward Baudrez.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
+
