@@ -1,0 +1,44 @@
+name                = PDL-NDBin
+author              = Edward Baudrez <ebaudrez@cpan.org>
+license             = Perl_5
+copyright_holder    = Edward Baudrez
+[@Filter]
+-bundle             = @Basic
+-remove             = UploadToCPAN              ; safe settings
+[FakeRelease]                                   ; safe settings
+[CopyFilesFromBuild]
+copy                = README
+copy                = Makefile.PL
+[MetaNoIndex]
+directory           = examples
+directory           = t
+directory           = tools
+[AutoPrereqs]
+skip                = ^PDL::NDBin::Actions_PP$
+[Git::NextVersion]
+;[AutoMetaResources]
+;bugtracker.rt      = 1
+;repository.github  = user:ebaudrez
+;homepage           = https://metacpan.org/release/%{dist}
+[PodWeaver]
+[PkgVersion]
+[NextRelease]
+[Test::Compile]
+[Test::CPAN::Changes]
+[Test::Version]
+has_version         = 0                         ; Actions_PP.pm doesn't have a version number
+;[Test::Kwalitee]
+;[Test::Perl::Critic]
+;[Test::Pod::LinkCheck]
+;[Test::Synopsis]
+;[Test::UnusedVars]
+[CheckMetaResources]
+[Test::ChangesHasContent]
+[PodSyntaxTests]
+[PodCoverageTests]
+[ReportVersions::Tiny]
+[@Filter]
+-bundle             = @Git
+-remove             = Git::Push                 ; push to remote disabled (no remotes configured by default)
+allow_dirty         = README
+; vim:set shiftwidth=4 softtabstop=4 expandtab:
