@@ -1,5 +1,9 @@
 Revision history for PDL::NDBin
 
+{{$NEXT}}
+
+ - started using Dist::Zilla for distribution management (Edward Baudrez)
+
 0.004 2013-02-02
 
  - never released on CPAN
